# AudioStream

./: .gitignore  CMakeLists.txt  README.md  StreamBridge_Development_Plan.docx  build_release.sh  build_release_windows.bat  run_pc_app.sh
.github/workflows/: build-android.yml  build-linux.yml  build-windows.yml
android_app/: README.md  pubspec.yaml
android_app/android/app/: build.gradle.kts
android_app/android/app/src/main/: AndroidManifest.xml
android_app/android/app/src/main/cpp/: CMakeLists.txt  android_receiver_engine.cpp  jitter_buffer.h
android_app/android/app/src/main/kotlin/com/audiostream/audiostream_app/: AudioReceiverService.kt  MainActivity.kt  ReceiverEngine.kt
android_app/android/app/src/main/res/drawable/: launch_background.xml
android_app/android/app/src/main/res/drawable-v21/: launch_background.xml
android_app/android/app/src/main/res/values/: colors.xml  styles.xml
android_app/android/app/src/main/res/values-night/: styles.xml
android_app/ios/Runner/: Info.plist
android_app/ios/Runner.xcodeproj/: project.pbxproj
android_app/lib/: main.dart
android_app/linux/: CMakeLists.txt
android_app/linux/runner/: my_application.cc
android_app/macos/Runner.xcodeproj/: project.pbxproj
android_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
android_app/macos/Runner/Configs/: AppInfo.xcconfig
android_app/test/: widget_test.dart
android_app/web/: index.html  manifest.json
android_app/windows/: CMakeLists.txt
android_app/windows/runner/: Runner.rc  main.cpp
core/: CMakeLists.txt
core/include/: capture.h  opus_decoder.h  opus_encoder.h  pulse_capture.h  rtp_packet.h  stream_controller.h  udp_sender.h  wasapi_capture.h
core/src/: bindings.cpp  opus_decoder.cpp  opus_encoder.cpp  pulse_capture.cpp  stream_controller.cpp  udp_sender.cpp  wasapi_capture.cpp
docs/: BUILD.md  CI_PIPELINE_DOC.md  design_log.md
pc_app/: AudioStream.spec  app.py  requirements.txt
tests/: stream.sdp  test_capture.cpp  test_opus.cpp  test_sender.cpp
